# nao_dcm

./: .gitignore  LICENSE.txt  README.md
nao_dcm/: CMakeLists.txt  package.xml
nao_dcm_apps/nao_dcm_camera/: CMakeLists.txt  package.xml
nao_dcm_apps/nao_dcm_camera/cfg/: NaoDCMCamera.cfg
nao_dcm_apps/nao_dcm_camera/include/nao_dcm_camera/: nao_camera.h
nao_dcm_apps/nao_dcm_camera/share/: camera_bottom_rgb8_1280x960.yaml  camera_bottom_rgb8_160x120.yaml  camera_bottom_rgb8_320x240.yaml  camera_bottom_rgb8_640x480.yaml  camera_top_rgb8_1280x960.yaml  camera_top_rgb8_160x120.yaml  camera_top_rgb8_320x240.yaml  camera_top_rgb8_640x480.yaml
nao_dcm_apps/nao_dcm_camera/src/: nao_camera.cpp  nao_camera_node.cpp
nao_dcm_apps/nao_dcm_gazebo/: CMakeLists.txt  package.xml
nao_dcm_apps/nao_dcm_gazebo/config/: gazebo_ros_control_params.yaml
nao_dcm_apps/nao_dcm_gazebo/launch/: nao_dcm_gazebo_H21.launch  nao_dcm_gazebo_H25.launch
nao_dcm_apps/nao_dcm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
nao_dcm_apps/nao_dcm_moveit_config/config/: controllers_H21.yaml  controllers_H25.yaml  fake_controllers.yaml  joint_limits.yaml  joint_limits_H21.yaml  kinematics.yaml  kinematics_H21.yaml  nao_dcm_moveit_config.rviz  nao_robot_v4_H21.srdf  nao_robot_v4_H25.srdf  ompl_planning_H21.yaml  ompl_planning_H25.yaml
nao_dcm_apps/nao_dcm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group_H21.launch  move_group_H25.launch  moveit.rviz  moveit_planner_H21.launch  moveit_planner_H25.launch  moveit_rviz.launch  nao_robot_v4_H21_moveit_controller_manager.launch.xml  nao_robot_v4_H25_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context_H21.launch  planning_context_H25.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
nao_dcm_apps/nao_dcm_rqt_dashboard/: CMakeLists.txt  package.xml  plugin.xml  setup.py
nao_dcm_apps/nao_dcm_rqt_dashboard/scripts/: nao_dcm_rqt_dashboard
nao_dcm_apps/nao_dcm_rqt_dashboard/src/nao_dcm_rqt_dashboard/: battery.py  camera.py  nao_dcm_rqt_dashboard.py  stiffness.py
nao_dcm_common/nao_dcm_control/: CMakeLists.txt  package.xml
nao_dcm_common/nao_dcm_control/config/: nao_trajectory_control.yaml  nao_trajectory_control_H21.yaml
nao_dcm_common/nao_dcm_control/launch/: nao_dcm_position_control.launch  nao_dcm_trajectory_control_H21.launch  nao_dcm_trajectory_control_H25.launch
nao_dcm_common/nao_dcm_description/: CMakeLists.txt  package.xml
nao_dcm_common/nao_dcm_description/config/: nao_dcm.rviz
nao_dcm_common/nao_dcm_description/launch/: display_nao_dcm_H21.launch  display_nao_dcm_H25.launch  nao_dcm_H21_urdf.launch  nao_dcm_H25_urdf.launch
nao_dcm_common/nao_dcm_description/meshes/: camera.dae  helmet.dae  helmet_xtion.dae  helmet_xtion.stl  odroid.dae  odroid_bag.dae
nao_dcm_common/nao_dcm_description/urdf/: nao_dcm_H21.xacro  nao_dcm_H21_control.xacro  nao_dcm_H21_structure.xacro  nao_dcm_H25.xacro  nao_dcm_H25_control.xacro  nao_dcm_H25_structure.xacro  nao_dcm_gazebo.xacro  nao_dcm_visuals_collisions.xacro
nao_dcm_common/nao_dcm_description/urdf/modules/: arms.xacro  cameras.xacro  hands.xacro  head.xacro  helmet.xacro  helmet_cameras.xacro  helmet_xtion.xacro  imu.xacro  legs.xacro  odroid_bag.xacro  robot.xacro  sonars.xacro  torso.xacro
nao_dcm_robot/nao_dcm_bringup/: package.xml
nao_dcm_robot/nao_dcm_bringup/config/: nao_dcm.yaml
nao_dcm_robot/nao_dcm_bringup/launch/: nao_dcm_H21_bringup.launch  nao_dcm_H21_bringup_remote.launch  nao_dcm_H25_bringup.launch  nao_dcm_H25_bringup_remote.launch  nao_dcm_bringup.launch  nao_slam.launch  xtion_openni.launch
nao_dcm_robot/nao_dcm_driver/: CMakeLists.txt  package.xml
nao_dcm_robot/nao_dcm_driver/cmake/: FindNAOqi.cmake
nao_dcm_robot/nao_dcm_driver/include/nao_dcm_driver/: nao.h
nao_dcm_robot/nao_dcm_driver/src/: nao.cpp  nao_driver.cpp
nao_dcm_robot/nao_dcm_msgs/: CMakeLists.txt  package.xml
nao_dcm_robot/nao_dcm_msgs/msg/: Bumper.msg  FSRs.msg  Tactile.msg
