<?xml version="1.0"?>
<!-- Copyright (c) 2014-2015, Konstantinos Chatzilygeroudis
All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:

1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.

2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer 
  in the documentation and/or other materials provided with the distribution.

3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived 
  from this software without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, 
BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT 
SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL 
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS 
INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE 
OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
<package>
  <name>nao_dcm</name>
  <version>0.0.1</version>
  <description>nao_dcm metapackage contains packages to integrate into ROS Aldebaran's Nao robot (v4).
    This metapackage integrates the underlying machine of Nao and not the API provided by Aldebaran.
  </description>

  <maintainer email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</maintainer>


  <license>BSD</license>

  <url type="repository">https://github.com/costashatz/nao_dcm</url>
  <url type="bugtracker">https://github.com/costashatz/nao_dcm/issues</url>

  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>nao_description</run_depend>
  <run_depend>nao_dcm_driver</run_depend>
  <run_depend>nao_dcm_msgs</run_depend>
  <run_depend>nao_control</run_depend>
  <run_depend>nao_gazebo</run_depend>
  <run_depend>nao_moveit_config</run_depend>

  <export>
    <metapackage/>
  </export>
</package>